--- a/hash.html
+++ b/hash.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hashing
-</h2>
-<h3>trying</h3>
+ <h2>hashing</h2>
+ <h3>trying</h3>
 </body>
 </html>
